9/17/2003
	- Fix an off-by-one error in the Name code; labels of length 63
	  were not accepted (patch from David Blacka <davidb@verisignlabs.com>)

9/2/2003
	- 1.4.1 released.

9/1/2003
	- The Update.delete(Record) method needs to reset the TTL of the cloned
	  record to 0. (reported by Edwin R. Rivera <erivera@moniker.com>)

8/23/2003
	- Change Record.fromString() to expect an EOL/EOF token at the end
	  of the string, so that extraneous tokens can be detected.  The master
	  file parser was updated to this change.
	  (noticed by Bob Halley <bob.halley@nominum.com>)

8/22/2003
	- Changing TXTRecord.getStrings() from returning a List of Strings
	  to a List of byte []'s was a bad idea.  Change it back, and
	  add TXTRecord.getStringsAsByteArrays().
	  (reported by Blake Ramsdell <blake@brutesquadlabs.com>)

8/21/2003
	- 1.4.0 released.

8/20/2003
	- Add the ReverseMap class, which contains functions to construct
	  names to be used in reverse map zones.

8/13/2003
	- When looking up a one label unqualified name which fails to match
	  all searchlist entries, don't append the root label and try again.
	  This is recommended by RFC 1536, section 6: "Only if the name, so
	  generated, returns an NXDOMAIN is the original name tried as a Fully
	  Qualified Domain Name. And only if it contains at least one period."

7/18/2003
	- Remove lots of unused imports. (Jared Richardson <jaredr@nc.rr.com>)

7/14/2003
	- Fix a long-existing bug where empty records (in update messages)
	  were incorrectly handled
	  (reported by Kevin C Miller <kevinm@andrew.cmu.edu>

6/22/2003
	- DNS types and classes are now represented as ints, not shorts.
	  This is an API change, but allows the full type/class range
	  to be used.

6/18/2003
	- Quoted strings didn't handle \ddd escapes.

6/17/2003
	- Fix an ArrayIndexOutofBoundsException triggered by load balancing
	  in the ExtendedResolver.
	  (reported by Norbert Desautels <ndesautels@gdgsystems.com>)

6/1/2003